# yoomoney-bot

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __main__.py  config.py  get_pay_token.py  payments.py  router.py
